[package]
name = "transmitterd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
reqwest = "0.11.12"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["preserve_order"] }
tokio = { version = "1.21.2", features = ["full"] }
